--- a/Resources/Private/Language/locallang_report.xlf
+++ b/Resources/Private/Language/locallang_report.xlf
@@ -14,7 +14,7 @@
          <trans-unit id="contacts" resname="contacts">
             <source>Contacts</source>
          </trans-unit>
-         <trans-unit id="contacts.list" resname="contacts.list">
+         <trans-unit id="contacts.lists" resname="contacts.lists">
             <source>Lists</source>
          </trans-unit>
          <trans-unit id="contacts.attribute.id" resname="contacts.attribute.id">
@@ -25,6 +25,9 @@
          </trans-unit>
          <trans-unit id="contacts.attribute.totalSubscriber" resname="contacts.attribute.totalSubscriber">
             <source>Total Subscriber</source>
+         </trans-unit>
+         <trans-unit id="contacts.attribute.uniqueSubscribers" resname="contacts.attribute.uniqueSubscribers">
+            <source>Unique Subscriber</source>
          </trans-unit>
          <trans-unit id="contacts.attribute.totalBlacklisted" resname="contacts.attribute.totalBlacklisted">
             <source>Total Blacklisted</source>
